fixing header.php
product overlap navbar fix
css display logo

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ a{
     margin: 40px;
     margin-left: 80px;
     color: black;
-    float: left;
+    display: inline-block;
 
 }
 
@@ -84,7 +84,7 @@ a{
 
 .product-container{
     float:left;
-    margin: 20px 0px 20px 50px;
+    margin: 40px 0px 20px 40px;
 }
 
 .product-img{
